Updates after meeting with Enphase

--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -26,7 +26,7 @@ versions:
 - CVE-2024-21880 - vR7, vR6, vR5 and vR4
 - CVE-2024-21881 - vR5 and vR4
 recommendation: Do not expose your Enphase equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway.
-patch_status: Patches available for all execept CVE-2024-21878
+patch_status: Patches available for all except CVE-2024-21878
 -workaround: n/a
 status : Open
 start: 2024-04-11
@@ -37,7 +37,7 @@ timeline:
   event: "Wietse Boonstra and Hidde Smit report six vulnerabilities to DIVD CSIRT"
 - start: 2024-04-17
   end:
-  event: "Vendor notified via email to cybersecurity (at) enphaseenergy.com and cybersecurity (at) energy.com and via ticket 16059299"
+  event: "Vendor notified via email to cybersecurity (at) enphaseenergy.com and cybersecurity (at) enphase.com and via ticket 16059299"
 - start: 2024-04-18
   end:
   event: "Vendor has acknowledge receipt of the vulnerability"
@@ -56,13 +56,13 @@ timeline:
   end:   2024-07-12
   event: "DIVD and Enphase work together"
 - start: 2024-07-12
-  event: "Enphase acknowledges that vulnerabilities are patched and starts updating devices."
+  event: "Enphase reports that vulnerabilities are patched. Finders have validated the fixes. Enphase starts updating devices."
 - start: 2024-07-12
   event: "DIVD starts scanning for vulnerable Envoy devices to assist with prioritizing patch process."
 - start: 2024-04-18
-  end:   2024-08-13
+  end:   2024-08-12
   event: "Time to limited disclosure"
-- start: 2024-08-13
+- start: 2024-08-12
   end:   
   event: "Limited disclosure of CVEs"
 # ips: 0 
@@ -77,11 +77,11 @@ jekyll-secinfo:
 ---
 ## Summary
 
-DIVD researchers Wietse Boonstra and Hidde Smit have discovered six critical vulnerabilities in Enphase IQ Gateway devices (formerly known as Enphase Envoy). The vulnerabilities are presentin in version 4.x to 8.x. Version 8.2.4225 and later are patched. The first three can be combined into a Remote Command Execution attack. For older (v7.x and older) devices, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754)). With these vulnerabilities, attackers could take control over the Enphase IQ Gateway device.
+DIVD researchers Wietse Boonstra and Hidde Smit have discovered six critical vulnerabilities in Enphase IQ Gateway devices (formerly known as Enphase Envoy). The vulnerabilities are present in version 4.x to 8.x. Version 8.2.4225 and later are patched. The first three can be combined into an Unauthenticated Remote Command Execution attack. For older (v7.x and older) devices, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754)). With these vulnerabilities, attackers could take control over the Enphase IQ Gateway device.
 
 ## What you can do
 
-We recommend that you do not expose your Enphase IQ Gateway device to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it has een patched by Enphase, to protect against future vulnerabilities.
+We recommend that you do not expose your Enphase IQ Gateway device to an untrusted network. As long as these vulnerabilities are unpatched, your device can be taken over remotely. We recommend that you do not (re)expose you device after it has been patched by Enphase, to protect against future vulnerabilities.
 
 You cannot upgrade the firmware of the Envoy IQ Gateway yourself. This is managed by Enphase. Enphase has released patches for five of these vulnerabilities which has made exploitation of the remaining cve ({% cve CVE-2024-21878 %}) impossible using any of the other CVEs.
 
@@ -94,6 +94,7 @@ DIVD has responsibly disclosed the vulnerability to Enphase, which has remediate
 
 
 ## More information
+* [Enphase Advisory](https://enphase.com/cybersecurity/advisories/ensa-2024-1)
 * {% cve CVE-2024-21876 %}
 * {% cve CVE-2024-21877 %}
 * {% cve CVE-2024-21878 %}
