--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -37,6 +37,15 @@ timeline:
 - start: 2024-07-09
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
+- start: 2024-08-05
+  end:
+  event: "DIVD performed a rescan to retrieve the latest vulnerable instances"
+- start: 2024-08-06
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network for the second time."
+- start: 2024-08-06
+  end:
+  event: "Case closed"
 ---
 
 ## Summary
