Updating closing statement

--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -45,7 +45,7 @@ timeline:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network for the second time."
 - start: 2024-08-06
   end:
-  event: "Case closed"
+  event: "Based on the results we've observed, we conclude that additional notifications will not further decrease the attack surface, and therefore, we are closing this case."
 ---
 
 ## Summary
