--- a/_cases/2024/DIVD-2024-00033.md
+++ b/_cases/2024/DIVD-2024-00033.md
@@ -26,7 +26,7 @@ versions:
 - Release Washington, below patch 2 Hot Fix 2
 - Release Washington, below patch 3 Hot Fix 1
 - Release Washington, below patch 4
-recommendation: "Install a patched version of SericeNow"
+recommendation: "Install a patched version of ServiceNow"
 workaround: "No workaround available"
 patch_status: Released
 status : Open
@@ -50,10 +50,10 @@ timeline:
 ---
 
 ## Summary
-ServiceNow has addressed an input validation vulnerability that was identified in Utah, Vancouver and Washington DC ServiceNow Platform releases. This vulnerability could enable an unauthenticated user to remotely execute code within the context of the Now Platform. ServiceNow applied an update to hosted instances, and ServiceNow released the update to their service partners and customers that are running a self-hosted version.
+ServiceNow has addressed an input validation vulnerability identified in Utah, Vancouver, and Washington DC ServiceNow Platform releases. This vulnerability could enable an unauthenticated user to remotely execute code within the context of the Now Platform. ServiceNow applied an update to hosted instances and released the update to service partners and customers running a self-hosted version.
 
 ## Recommendations
-SericeNow released several patched versions. We advice to update to one of the mentioned versions (or better) as soon as possible.
+ServiceNow released several patched versions. We suggest you update one of the mentioned versions (or better) as soon as possible.
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of ServiceNow and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
