--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -48,9 +48,9 @@ timeline:
 GeoServer and GeoTools have issued a security announcement and fixed an XPath expression injection vulnerability. This vulnerability results in unauthenticated Remote Code Execution (RCE), allowing an attacker to gain full access to the system without authentication.
 
 ## Recommendations
-GeoServer released serveral patched versions (2.24.4, 2.25.2 and 2.23.6). Please update to one of those versions (or better) as soon as possible.
+GeoServer released several patched versions (2.24.4, 2.25.2 and 2.23.6). Please update to one of those versions (or better) as soon as possible.
 
-GeoTools released serveral patched versions (29.6, 30.4 and 31.2). Please update to one of those versions (or better) as soon as possible.
+GeoTools released several patched versions (29.6, 30.4 and 31.2). Please update to one of those versions (or better) as soon as possible.
 
 ## Mitigation
 If relevant users cannot install updates temporarily, the following measures can be taken for temporary relief: Deleting the `gt-complex-x.y.jar` file in GeoServer (x.y is the version of GeoTools, such as `gt-complex-31.1.jar` in GeoServer 2.25.1) will remove vulnerable code from GeoServer, but may compromise some GeoServer functionality. When a gt-complex module is required by an extension in use, it may cause the GeoServer deployment to fail.
