--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -56,11 +56,11 @@ Zyxel advises upgrading to the latest firmware version to benefit from the vulne
 - NAS326 -> [V5.21(AAZF.17)C0](https://download.zyxel.com/NAS326/firmware/NAS326_V5.21(AAZF.17)C0.zip) (released May 10th 2024) 
 - NAS542 -> [V5.21(ABAG.14)C0](https://download.zyxel.com/NAS542/firmware/NAS542_V5.21(ABAG.14)C0.zip) (released May 10th 2024) 
 
-DIVD recommends that you do not have this device reachable from the internet unless it is absolutely nessecary. If this is the case, a firewall rule should be placed in front of the Zyxel NAS device so that it can only be accessed from trusted IP addresses so attackers will have no access.
+DIVD recommends that you do not have this device reachable from the internet unless it is absolutely necessary. If this is the case, a firewall rule should be placed in front of the Zyxel NAS device so that it can only be accessed from trusted IP addresses so attackers will have no access.
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notifying them. We do this by finding Zyxel NAS devices connected to the internet and verifying if the device is running the latest firmware version to be protected against the above described threats. The notifications will be sent to the party responsible for the ip address according to the whois database.
+DIVD is currently working to identify and notify vulnerable parties. We do this by finding Zyxel NAS devices connected to the internet and verifying if the device is running the latest firmware version to be protected against the above-described threats. The notifications will be sent to the party responsible for the IP address according to the Whois database.
 
 {% include timeline.html %}
 
