--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -12,9 +12,9 @@ cves:
 product:
 - VMware vCenter
 versions: 
-- vCenter 7 Update 3 lower then version 7.0 U3r (build 24026615)
-- vCenter 8 Update 1 lower then version 8.0 U1e (build 24005165)
-- vCenter 8 Update 2 lower then version 8.0 U2d (build 23929136)
+- vCenter 7 Update 3 lower than version 7.0 U3r (build 24026615)
+- vCenter 8 Update 1 lower than version 8.0 U1e (build 24005165)
+- vCenter 8 Update 2 lower than version 8.0 U2d (build 23929136)
 recommendation: "Install the update as soon as possible"
 workaround: "None"
 patch_status: Available
@@ -50,7 +50,7 @@ timeline:
 
 ## Summary
 
-The vCenter Server contains multiple heap-overflow vulnerabilities in the implementation of the DCERPC protocol. A malicious actor with network access to vCenter Server may trigger these vulnerabilities by sending a specially crafted network packet potentially leading to remote code execution.
+The vCenter Server contains multiple heap overflow vulnerabilities in the implementation of the DCERPC protocol. A malicious actor with network access to vCenter Server may trigger these vulnerabilities by sending a specially crafted network packet potentially leading to remote code execution.
 
 ## Recommendations
 
