--- a/_cases/2024/DIVD-2024-00026.md
+++ b/_cases/2024/DIVD-2024-00026.md
@@ -3,7 +3,7 @@ layout: case
 title: "Unauthenticated RCE in Rejetto HTTP File Server"
 author: Boaz Braaksma
 lead: Stan Plasmeijer
-excerpt: "In Rejetto HTTP File Server, version 2.3x up to 2.4 RC07, an vulnerability exists that allows a remote, unauthenticated attacker to execute arbitrary commands on the affected system by sending a specially crafted HTTP request. This vulnerability affects both the Windows and Wine versions."
+excerpt: "In Rejetto HTTP File Server, version 2.3x up to 2.4 RC07, a vulnerability exists that allows a remote, unauthenticated attacker to execute arbitrary commands on the affected system by sending a specially crafted HTTP request. This vulnerability affects both the Windows and Wine versions."
 researchers:
 - Stan Plasmeijer
 - Wessel Baltus
@@ -58,8 +58,8 @@ ips: 908
 
 ## Summary
 
-The Rejetto HTTP File Server (HFS) version 2.3x up to, and including version 2.4 RC07, suffer from a server-side template injection (SSTI) vulnerability that does not require authentication. This vulnerability affects both the Windows and Wine versions. This flaw allows a remote attacker, without needing to authenticate, to execute arbitrary code with the same privileges as the HFS.exe server process. 
-This vulnerability is present in version 2.3x up to, and including version 2.4 RC07. As version 2.x of HFS is no longer supported, users are advised to migrate to the supported version 3.x to ensure security.
+The Rejetto HTTP File Server (HFS) version 2.3x up to, and including version 2.4 RC07, suffers from a server-side template injection (SSTI) vulnerability that does not require authentication. This vulnerability affects both the Windows and Wine versions. This flaw allows a remote attacker, without needing to authenticate, to execute arbitrary code with the same privileges as the HFS.exe server process. 
+This vulnerability is present in version 2.3x up to and including version 2.4 RC07. As version 2.x of HFS is no longer supported, users are advised to migrate to the supported version 3.x to ensure security.
 
 ## Recommendations
 
