--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -49,11 +49,11 @@ timeline:
 
 ---
 ## Summary
-Two (OS) command injection vulnerabilities have been found in QNAP devices. When exploited it's possible for attackers with network/internet access to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Two (OS) command injection vulnerabilities have been found in QNAP devices. When exploited, it's possible for attackers with network/internet access to execute CLI commands on your NAS device as admin users. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
 
 ## Recommendations
 
-QNAP recommends to upgrade to the latest version, to benefit from vulnerability fixes. On the versions below, the mentioned vulnerabilities have been fixed:
+QNAP recommends upgrading to the latest version to benefit from vulnerability fixes. On the versions below, the mentioned vulnerabilities have been fixed:
 
 - QTS 5.x - QTS 5.1.5.2645 build 20240116 and later
 - QTS 4.5.x and 4.4.x - QTS 4.5.4.2627 build 20231225 and later
@@ -67,14 +67,14 @@ QNAP recommends to upgrade to the latest version, to benefit from vulnerability 
 
 DIVD recommends that you do not have this device reachable from the internet unless it is absolutely nessecary. If this is the case, a firewall rule should be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses.
 
-Please check also this QNAP page about their security advice tilted [take immediate-actions to stop your nas from exposing to the internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together). 
+Please also check this QNAP page about their security advice titled [take immediate-actions to stop your nas from exposure to the internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together). 
 
---> Specially have a look at "Step 2: Disable the UPnP function of the QNAP NAS"
+--> Especially have a look at "Step 2: Disable the UPnP function of the QNAP NAS"
 
 ## What we are doing
 
 DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP devices connected to the internet and verifying if the quick.cgi file is available.
-The notifications will be sent to the party responsible for the ip address according to the whois database.
+The notifications will be sent to the party responsible for the IP address according to the Whois database.
 
 {% include timeline.html %}
 
