--- a/_cases/2024/DIVD-2024-00023.md
+++ b/_cases/2024/DIVD-2024-00023.md
@@ -65,9 +65,9 @@ Both vulnerabilities combined can lead to an unauthenticated attacker achieving 
 
 ## Recommendations
 
-Telerik recommends updating to the latest version of Telerik Report Server, which is 2024 Q2 (10.1.24.514). For updating to the latest version see [this Telerik knowledge base article](https://docs.telerik.com/report-server/implementer-guide/setup/upgrade).
+Telerik recommends updating to the latest version of Telerik Report Server, which is 2024 Q2 (10.1.24.514). For updating to the latest version, see [this Telerik knowledge base article](https://docs.telerik.com/report-server/implementer-guide/setup/upgrade).
 
-Telerik also recommends to review your Report Server's users list for any new Local users you have not added at `{host}/Users/Index`.
+Telerik also recommends reviewing your Report Server's users list for any new Local users you have not added at `{host}/Users/Index`.
 
 ## Mitigation
 
