--- a/_cases/2024/DIVD-2024-00021.md
+++ b/_cases/2024/DIVD-2024-00021.md
@@ -53,12 +53,12 @@ ips: 10200
 ---
 ## Summary
 
-The Check Point Research Division discovered a vulnerability in Security Gateways with IPsec VPN, Remote Access VPN or the Mobile Access blade enabled (CVE-2024-24919). The vulnerability potentially allows an attacker to access information on Gateways connected to the Internet, with Remote Access VPN or Mobile Access enabled. 
+The Check Point Research Division discovered a vulnerability in Security Gateways with IPsec VPN, Remote Access VPN or the Mobile Access blade enabled (CVE-2024-24919). The vulnerability potentially allows an attacker to access information on Gateways connected to the Internet with Remote Access VPN or Mobile Access enabled. 
 Security Gateways of all versions with the IPsec VPN, Remote Access or Mobile Access software blades are vulnerable.
 
 ## Recommendations
 
-Check Point released hotfixes that address this vulnerability, see https://support.checkpoint.com/results/sk/sk182336 for more information. Install this hot fix as soon as possible.
+Check Point released hotfixes that address this vulnerability, see https://support.checkpoint.com/results/sk/sk182336 for more information. Install this hotfix as soon as possible.
 
 ## What we are doing
 
