--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -40,7 +40,7 @@ ips: n/a
 ---
 ## Summary
 
-As part of [Operation Endgame](https://www.politie.nl/endgame), the biggest anti-botnet operation to date. The Dutch Police, in cooperation with policy units form Germany, France, Denmark, the United States and United Kingdom and suppor to Europol and Eurojust have infiltrated a number of botnets, including at least `Smokeloader`, `IcedId`, `Pikabot`, `SystemBC` and `Bumblebee`. During this infiltration they obtained data about the victims of these botnets. 
+As part of [Operation Endgame](https://www.politie.nl/endgame), the biggest anti-botnet operation to date. The Dutch Police, in cooperation with policy units from Germany, France, Denmark, the United States and the United Kingdom and with support to Europol and Eurojust, have infiltrated a number of botnets, including at least `Smokeloader`, `IcedId`, `Pikabot`, `SystemBC` and `Bumblebee`. During this infiltration, they obtained data about the victims of these botnets. 
 
 This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
@@ -79,7 +79,7 @@ We have received the discovered data from the police, and are sending out notifi
 
 **Q: Is this a scam?**
 
-A: It’s great that you’re skeptical. However, this is legit and definitely not a scam. This operation is a collaboration between the Dutch National Police, Europol, Digital Trust Center, NCSC and others. We, Dutch Institute of Vulnerability Disclosure (DIVD), are mentioned in the press releases from [the Dutch Police](https://www.politie.nl/endgame) and Europol. The ['Check je Hack. (translation: Check your Hack)](https://www.politie.nl/informatie/veel-gestelde-vragen-over-check-je-hack.html) FAQ also mentiones DIVD and shares a link back to this casefile. 
+A: It’s great that you’re sceptical. However, this is legit and definitely not a scam. This operation is a collaboration between the Dutch National Police, Europol, Digital Trust Center, NCSC and others. We, the Dutch Institute of Vulnerability Disclosure (DIVD), are mentioned in the press releases from [the Dutch Police](https://www.politie.nl/endgame) and Europol. The ['Check je Hack. (translation: Check your Hack)](https://www.politie.nl/informatie/veel-gestelde-vragen-over-check-je-hack.html) FAQ also mentiones DIVD and shares a link back to this casefile. 
 
 ---
 
