--- a/_cases/2024/DIVD-2024-00015.md
+++ b/_cases/2024/DIVD-2024-00015.md
@@ -64,7 +64,7 @@ This vulnerability is present in the CrushFTP web interface. Therefore, if only 
 
 ## Recommendations
 
-CrushFTP recommends upgrading to the latest available version. For users running versions in the v10 range, it's advised to update to V10.7.1. Alternatively, upgrading to v11.1.0 is also an option.
+CrushFTP recommends upgrading to the latest available version. Users running versions in the v10 range are advised to update to V10.7.1. Alternatively, upgrading to v11.1.0 is also an option.
 
 For those operating CrushFTP servers within the v11 range, updating to v11.1.0 is recommended.
 
