--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -84,7 +84,7 @@ PAN-OS 11.1:
 
 ## Mitigation
 
-When a upgrading is not suitable for you for you and you have a Threat Prevention subscription with Palo Alto, you can block attacks using Threat IDs 95187, 95189, and 95191 (available in Applications and Threats content version 8836-8695 and later).
+When upgrading is not suitable and you have a Threat Prevention subscription with Palo Alto, you can block attacks using Threat IDs 95187, 95189, and 95191 (available in Applications and Threats content version 8836-8695 and later).
 
 ## What we are doing
 
