--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Unauthenticated Local File Inclusion vulnerability vulnerability in ComfortKey"
+title: "Unauthenticated Local File Inclusion vulnerability in ComfortKey"
 author: Victor Pasman
 lead: Alwin Warringa
 excerpt: "A Local File Inclusion vulnerability has been found in ComfortKey, a product of Celsius Benelux. Using this vulnerability, an unauthenticated attacker may retrieve sensitive information about the underlying system."
