--- a/_cases/2022/DIVD-2022-00009.md
+++ b/_cases/2022/DIVD-2022-00009.md
@@ -183,7 +183,7 @@ findings to the people that can actually address those findings.
 Frank
 ```
 
-We have since asked both Wei personally as well as Solarman via LinkedIn to respond to our email. On 9 Sep 2022 we were still to reveive a reply.
+We have since asked both Wei personally as well as Solarman via LinkedIn to respond to our email. On 9 Sep 2022 we were still to receive a reply.
 
 ## What you can do
 
