--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -11,6 +11,7 @@ researchers:
 - Wietse Boonstra
 - Hidde Smit
 - Max van der Horst
+- Frank Breedijk
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet). But, given that we discovered that you should always be able to get a CVE id from @cna_admins on Slack
 cves:
 - CVE-2024-21876
@@ -22,11 +23,11 @@ cves:
 product: 
 - Enphase IQ Gateway devices (formerly known as Enphase Envoy)
 versions: 
-- CVE-2024-21876, CVE-2024-21877, CVE-2024-21878, and CVE-2024-21879 - vR8, vR7, vR6, vR5 and vR4
-- CVE-2024-21880 - vR7, vR6, vR5 and vR4
-- CVE-2024-21881 - vR5 and vR4
+- CVE-2024-21876, CVE-2024-21877, CVE-2024-21878, and CVE-2024-21879 - v8 < v8.2.4225, v7, v6, v5 and v4
+- CVE-2024-21880 - v7, v6, v5 and v4
+- CVE-2024-21881 - v5 and v4
 recommendation: Do not expose your Enphase equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway.
-patch_status: Patches available for all except CVE-2024-21878
+patch_status: Patches available
 -workaround: n/a
 status : Open
 start: 2024-04-11
@@ -60,11 +61,14 @@ timeline:
 - start: 2024-07-12
   event: "DIVD starts scanning for vulnerable Envoy devices to assist with prioritizing patch process."
 - start: 2024-04-18
-  end:   2024-08-12
+  end:   2024-08-10
   event: "Time to limited disclosure"
-- start: 2024-08-12
+- start: 2024-08-10
   end:   
-  event: "Limited disclosure of CVEs"
+  event: "Limited disclosure of CVEs by Enphase"
+- start: 2024-08-10
+  end:   
+  event: "Limited disclosure of CVEs by DIVD following Enphase disclosure"
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
@@ -94,10 +98,10 @@ DIVD has responsibly disclosed the vulnerability to Enphase, which has remediate
 
 
 ## More information
-* [Enphase Advisory](https://enphase.com/cybersecurity/advisories/ensa-2024-1)
-* {% cve CVE-2024-21876 %}
-* {% cve CVE-2024-21877 %}
-* {% cve CVE-2024-21878 %}
-* {% cve CVE-2024-21879 %}
-* {% cve CVE-2024-21880 %}
-* {% cve CVE-2024-21881 %}
+* [Enphase Advisories](https://enphase.com/cybersecurity/advisories/ensa-2024-1)
+* {% cve CVE-2024-21876 %} - [Enphase Advisory for CVE-2024-21876](https://enphase.com/cybersecurity/advisories/ensa-2024-1)
+* {% cve CVE-2024-21877 %} - [Enphase Advisory for CVE-2024-21877](https://enphase.com/cybersecurity/advisories/ensa-2024-2)
+* {% cve CVE-2024-21878 %} - [Enphase Advisory for CVE-2024-21878](https://enphase.com/cybersecurity/advisories/ensa-2024-3)
+* {% cve CVE-2024-21879 %} - [Enphase Advisory for CVE-2024-21879](https://enphase.com/cybersecurity/advisories/ensa-2024-4)
+* {% cve CVE-2024-21880 %} - [Enphase Advisory for CVE-2024-21880](https://enphase.com/cybersecurity/advisories/ensa-2024-5)
+* {% cve CVE-2024-21881 %} - [Enphase Advisory for CVE-2024-21881](https://enphase.com/cybersecurity/advisories/ensa-2024-6)
