Guideline on credential leaks

--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -35,6 +35,7 @@ timeline:
   end: open
   event: "DIVD sends out first notifications"
 ips: n/a
+creds: 18000000
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
