Add credentials leakd (and cves) to stats

--- a/_cases/2020/DIVD-2020-00013.md
+++ b/_cases/2020/DIVD-2020-00013.md
@@ -47,6 +47,7 @@ timeline:
   event: First emails sent
 
 ips: n/a
+creds: 386
 ---
 <p>
 	<small><a href='{{ page.url }}#english'>English below</a></small>
