--- a/_cases/2021/DIVD-2021-00012.md
+++ b/_cases/2021/DIVD-2021-00012.md
@@ -50,6 +50,7 @@ timeline:
   end:
   event: Case closed
 ips: n/a
+creds: 2500000
 ---
 <p>
   <small><a href='{{ page.url }}#english'>English below</a></small>
