--- a/_cases/2021/DIVD-2021-00004.md
+++ b/_cases/2021/DIVD-2021-00004.md
@@ -56,6 +56,7 @@ timeline:
   event: Case closed
 
 ips: n/a	
+creds: 100
 ---
 <p>
 	<small><a href='{{ page.url }}#english'>English below</a></small>
