Final updates to the case

--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -38,9 +38,10 @@ timeline:
 - start: 2024-06-20
   end:
   event: "CSIRTs, CERTs and security teams can request data"
-# ips: 0 
+ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
+creds: 1200000000
 ---
 ## Summary
 
@@ -62,7 +63,7 @@ We also analyzed the target URLs, and for the HTTP, HTTPS, FTP, and FTPS account
 
 For the email addresses, we have a list available of these apex domains along with the count of unique usernames and passwords. For the target URLs, we have a list available of these apex domains along with a count of the unique username/URL combinations.
 
-We plan to contact CERTs, CSIRTs, and security teams and provide them with this list so they can supply us with a list of apex domains they want more detailed information for. To protect the individuals, we will only provide this information if the requester can be validated and if the list of requested domains makes sense. We will only provide a masked version of the password; we will NOT provide the full passwords.
+We plan to contact CERTs, CSIRTs, and security teams and provide them with this list so they can supply us with a list of apex domains they want more detailed information for. To protect the individuals, we will only provide this information if the requester can be validated and if the list of requested domains makes sense. We will only provide a masked version of the password; we will NOT provide the full passwords. The list of apex domains is also available at the botton of this page. As per out [stolen credentials policy](/credentials/) we will not provide data to government agencies of countries that do not score better then 4 =the Humand Rights index.
 
 ## What you can do
 
@@ -79,3 +80,4 @@ If you are an individual and found out that your account is on these lists, here
 
 ## More information
 * [Troy Hunt's blog](https://www.troyhunt.com/telegram-combolists-and-361m-email-addresses/)
+* [Apex lists](/downloads/DIVD-2024-00022/data.tgz)
