--- a/_cases/3000/DIVD-3000-00001.md
+++ b/_cases/3000/DIVD-3000-00001.md
@@ -39,12 +39,15 @@ timeline:
 - start: 2024-01-18
   end:
   event: "First version of this case file"
-- start: 2024-01-18
+- start: 2024-07-18
   end:
   event: "DIVD sent out a first batch of notifications."
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
+# creds: 0 
+# creds is used for statistics after the case is closed if the case involves stolen credentials. If it is not applicable, you can
+# set it to n/a or 0 or leave this field unset.
 ---
 ## Summary
 
