--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -63,7 +63,7 @@ We also analyzed the target URLs, and for the HTTP, HTTPS, FTP, and FTPS account
 
 For the email addresses, we have a list available of these apex domains along with the count of unique usernames and passwords. For the target URLs, we have a list available of these apex domains along with a count of the unique username/URL combinations.
 
-We plan to contact CERTs, CSIRTs, and security teams and provide them with this list so they can supply us with a list of apex domains they want more detailed information for. To protect the individuals, we will only provide this information if the requester can be validated and if the list of requested domains makes sense. We will only provide a masked version of the password; we will NOT provide the full passwords. The list of apex domains is also available at the botton of this page. As per out [stolen credentials policy](/credentials/) we will not provide data to government agencies of countries that do not score better then 4 =the Humand Rights index.
+We plan to contact CERTs, CSIRTs, and security teams and provide them with this list so they can supply us with a list of apex domains they want more detailed information for. To protect the individuals, we will only provide this information if the requester can be validated and if the list of requested domains makes sense. We will only provide a masked version of the password; we will NOT provide the full passwords. The list of apex domains is also available at the botton of this page. As per our [stolen credentials policy](/credentials/) we will not provide data to government agencies of countries that do not score better then 4 on the Humand Rights index.
 
 ## What you can do
 
