Clearer howto for certs

--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -65,6 +65,15 @@ For the email addresses, we have a list available of these apex domains along wi
 
 We plan to contact CERTs, CSIRTs, and security teams and provide them with this list so they can supply us with a list of apex domains they want more detailed information for. To protect the individuals, we will only provide this information if the requester can be validated and if the list of requested domains makes sense. We will only provide a masked version of the password; we will NOT provide the full passwords. The list of apex domains is also available at the botton of this page. As per our [stolen credentials policy](/credentials/) we will not provide data to government agencies of countries that do not score better then 4 on the Humand Rights index.
 
+If you are a CSIRT, CERT or security team and want to get data from us:
+1. Download the apex list from the link at the bottom of this page
+2. Match these apexes to the domains in you constituency, that you own or are responsible for
+3. A list of the domains that have hits to csirt@divd.nl
+4. If we can validate that you have a legitimate interest in these domains we will send you the data back
+5. Be patient, we are a volunteer run orginisation and have day jobs.
+6. Spread the word.
+
+
 ## What you can do
 
 If you are an individual and found out that your account is on these lists, here's what you should do:
@@ -73,6 +82,7 @@ If you are an individual and found out that your account is on these lists, here
   - Use a unique and random, strong password or passphrase for every individual account.
   - We know that means you will end up with hundreds or thousands of unique and difficult-to-remember passwords. This does not fit a normal human brain, so get a [reputable](https://www.techradar.com/best/password-manager) [password](https://www.pcmag.com/picks/the-best-password-managers) [manager](https://www.tomsguide.com/us/best-password-managers,review-3785.html).
   - A lot of sites offer [multi](https://ssd.eff.org/module/how-enable-two-factor-authentication) [factor](https://www.cisa.gov/secure-our-world/turn-mfa) [authentication](https://letmegooglethat.com/?q=How+do+I+enable+mfa+for+%5Byour+service+here%5D) (MFA). With MFA, access to a service or account doesn't solely rely on username and password, but requires a number from or a button click in an app on your phone, which is much harder to steal and trade for criminals.
+
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
