--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -70,7 +70,7 @@ If you are a CSIRT, CERT or security team and want to get data from us:
 2. Match these apexes to the domains in you constituency, that you own or are responsible for
 3. A list of the domains that have hits to csirt@divd.nl
 4. If we can validate that you have a legitimate interest in these domains we will send you the data back
-5. Be patient, we are a volunteer run orginisation and have day jobs.
+5. Be patient, we are a volunteer run organisation and have day jobs.
 6. Spread the word.
 
 
