--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -66,7 +66,7 @@ Another CVE (CVE-2024-6342) was found in the suggested firmware version of this 
 Zyxel advises upgrading to the latest firmware version to benefit from the vulnerability fixes. On the versions below, the mentioned vulnerabilities have been fixed:
 
 - NAS326 -> [V5.21(AAZF.18)Hotfix01](https://fwstore-zsdn-cloud-zyxel-com.s3.us-east-1.amazonaws.com/Home%20product/NAS/NAS326/521AAZF18C0Hotfix01.bin) (released end-of Aug 2024) 
-- NAS542 -> [V5.21(ABAG.15)Hotfix01](https://fwstore-zsdn-cloud-zyxel-com.s3.us-east-1.amazonaws.com/Home%20product/NAS/NAS542/521ABAG15C0Hotfix01.bin) (released May 10th 2024) 
+- NAS542 -> [V5.21(ABAG.15)Hotfix01](https://fwstore-zsdn-cloud-zyxel-com.s3.us-east-1.amazonaws.com/Home%20product/NAS/NAS542/521ABAG15C0Hotfix01.bin) (released end-of Aug 2024) 
 
 DIVD recommends that you do not have this device reachable from the internet unless it is absolutely necessary. If this is the case, a firewall rule should be placed in front of the Zyxel NAS device so that it can only be accessed from trusted IP addresses so attackers will have no access.
 
