--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -24,8 +24,8 @@ versions:
 recommendation: "Check for the patched versions and get those installed"
 workaround: "Yes"
 patch_status: Released
-status : Open
-start: 2024-07-03
+status : Closed
+start: 2024-09-14
 end:
 timeline:
 - start: 2024-07-03
@@ -40,7 +40,13 @@ timeline:
 - start: 2024-07-05
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-# ips: 0
+- start: 2024-09-14
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-09-14
+  end:
+  event: "Case closed."
+ips: 2448
 
 ---
 
