--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -26,7 +26,7 @@ workaround: "Yes"
 patch_status: Released
 status : Closed
 start: 2024-07-03
-end:
+end: 2024-09-14
 timeline:
 - start: 2024-07-03
   end:
