--- a/_cases/2024/DIVD-2024-00033.md
+++ b/_cases/2024/DIVD-2024-00033.md
@@ -29,9 +29,9 @@ versions:
 recommendation: "Install a patched version of ServiceNow"
 workaround: "No workaround available"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-07-13
-end:
+end: 2024-09-18
 timeline:
 - start: 2024-07-13
   end:
@@ -45,7 +45,13 @@ timeline:
 - start: 2024-07-17
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-# ips: 0
+- start: 2024-09-18
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-09-18
+  end:
+  event: "Case closed."
+ips: 364
 
 ---
 
