--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -47,7 +47,12 @@ timeline:
 - start: 2024-09-10
   end:
   event: "DIVD starts researching into a new fingerprint that also includes CVE-2024-6342"
-
+- start: 2024-09-19
+  end:
+  event: "DIVD switched in new fingerprint to check the device firmware creation-date"
+- start: 2024-09-26
+  end:
+  event: "DIVD completed new scan and notifying network owners with a vulnerable device"
 #ips: 0
 
 ---
@@ -59,7 +64,7 @@ At DIVD, we will primarily focus on CVE-2024-29973 to identify vulnerable device
 
 !!NEW UPDATE!!
 
-Another CVE (CVE-2024-6342) was found in the suggested firmware version of this case so we updated the case to the lastest download links as outlined in this new [Zyxel Security Advisory 10-09-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-os-command-injection-vulnerability-in-nas-products-09-10-2024)
+Another CVE (CVE-2024-6342) was found in the suggested firmware version of this case so we updated the case to the lastest download links as outlined in this new [Zyxel Security Advisory 10-09-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-os-command-injection-vulnerability-in-nas-products-09-10-2024). We updated the fingerprint to check the firmware creation date from the Last-Modified header, allowing us to determine if the below mentoined hotfix-firmware version is active on the Zyxel NAS device.
 
 ## Recommendations
 
