--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -49,7 +49,7 @@ timeline:
   event: "DIVD starts researching into a new fingerprint that also includes CVE-2024-6342"
 - start: 2024-09-19
   end:
-  event: "DIVD switched in new fingerprint to check the device firmware creation-date"
+  event: "DIVD switched to new fingerprint that checks the device firmware creation-date"
 - start: 2024-09-26
   end:
   event: "DIVD completed new scan and notifying network owners with a vulnerable device"
