--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -34,6 +34,9 @@ timeline:
 - start: 2024-09-29
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-10-01
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network"
 
 ---
 
