--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -17,7 +17,7 @@ versions:
 - versions 18.12.14 and below
 recommendation: "Update to Apache OFBiz version 18.12.15 or higher if available"
 workaround: "None"
-patch_status: Patches available
+patch_status: Patch available
 status : Open
 start: 2024-09-29
 end: None
