--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -3,7 +3,7 @@ layout: case
 title: "Incorrect Authorization vulnerability in Apache OFBiz resulting in RCE"
 author: Wessel Baltus
 lead: Wessel Baltus
-excerpt: "In Apache OFBiz, version 18.12.14and below, a Incorrect Authorization vulnerability exists that allows pre-authentication remote code execution (RCE) resulting in a attacker being able to execute arbitrary commands on the affected system by sending a specially crafted HTTP request."
+excerpt: "In Apache OFBiz, version 18.12.14 and below, an Incorrect Authorization vulnerability exists that allows pre-authentication remote code execution (RCE) resulting in an attacker being able to execute arbitrary commands on the affected system by sending a specially crafted HTTP request."
 researchers:
 - Wessel Baltus 
 - Stan Plasmeijer
