--- a/_cases/2024/DIVD-2024-00039.md
+++ b/_cases/2024/DIVD-2024-00039.md
@@ -45,7 +45,7 @@ CVE-2024-38856 is a critical pre-authentication remote code execution (RCE) vuln
 
 ## Recommendations
 
-The Apache OFBiz versions 18.12.14 and below are vulnerable. Upgrade to version 18.12.15 as soon as possible.
+The Apache OFBiz versions 18.12.14 and below are vulnerable. Upgrade to version 18.12.15 or higher as soon as possible.
 
 ## What we are doing
 
