--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -25,9 +25,9 @@ versions:
 - QuTScloud c5.x - versions before QuTScloud c5.1.5.2651
 recommendation: "If you have a any of the vulnerable firmware/software version on your QNAP device, please update it to the latest version."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-06-07
-end:
+end: 2024-10-03
 timeline:
 - start: 2024-06-07
   end:
@@ -44,8 +44,13 @@ timeline:
 - start: 2024-06-24
   end:
   event: "DIVD starts notifying network owners with a vulnerable device in their network."
-
-#ips: 0
+- start: 2024-09-30
+  end:
+  event: "DIVD completed rescan and send out notications"
+- start: 2024-10-03
+  end:
+  event: "Case closed"
+ips: 9551
 
 ---
 ## Summary
