--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -24,7 +24,7 @@ recommendation: "If your Zyxel NAS device is running a vulnerable firmware/softw
 patch_status: Released
 status : Closed
 start: 2024-06-24
-end:
+end: 2024-10-03
 timeline:
 - start: 2024-06-24
   end:
