--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -3,7 +3,7 @@ layout: case
 title: "2024-00004 Global NGOs"
 excerpt: "This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs."
 author: Victor Gevers
-lead: Victor Gevers
+lead: Tabitha Vogelaar
 researchers:
 - Alwin Warringa
 - Anje Knottnerus
