--- a/_cases/2024/DIVD-2024-00041.md
+++ b/_cases/2024/DIVD-2024-00041.md
@@ -14,7 +14,7 @@ product:
 - Progress Software WhatsUp
 versions: 
 - All versions released before 2024.0.0
-recommendation: "Update to non vulnerable versions"
+recommendation: "Update to a non-vulnerable version"
 workaround: "none"
 patch_status: Patch available
 status : Open
@@ -34,15 +34,15 @@ timeline:
 ---
 
 ## Summary
-WhatsUp Gold, software used for network monitoring and management has disclosed a critical security vulnerability affecting versions released prior to 2024.0.0. This vulnerability, identified as CVE-2024-6670, involves a SQL Injection flaw that allows unauthenticated attackers to retrieve users encrypted passwords.
+WhatsUp Gold, software used for network monitoring and management, has disclosed a critical security vulnerability affecting versions released prior to 2024.0.0. This vulnerability, identified as CVE-2024-6670, involves a SQL Injection flaw that allows unauthenticated attackers to retrieve users' encrypted passwords. Obtaining such passwords could lead to compromise of users' accounts.
 
 ## Recommendations
 
-To remediate CVE-2024-6670 update to version 24.0.0 or later. You can find a link to the Progress their bulletin at the bottom of this post.
+To remediate CVE-2024-6670, update to version 24.0.0 or later. You can find a link to the Progress bulletin at the bottom of this post. Additionally, consider making your WhatsUp Gold instance unavailable from the public internet.
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a vulnerable version of # WhatsUp Gold and to notify these parties. We do this by looking at the version numbers if possible. 
+DIVD is currently working to identify parties that are running a vulnerable version of WhatsUp Gold and to notify these parties. We do this by looking at the version numbers if possible. 
 
 {% include timeline.html %}
 
