--- a/_cases/2024/DIVD-2024-00024.md
+++ b/_cases/2024/DIVD-2024-00024.md
@@ -1,13 +1,12 @@
 ---
 layout: case
-title: "Multiple Vulnerabilities in SOPlanning"
-author: Max van der Horst
+title: "Multiple vulnerabilities found in the SOPlanning tool"
+author: Victor Pasman
 lead: Max van der Horst
-excerpt: "Multiple injection and access control vulnerabilities have been found in SOPlanning. Please update to the latest version as soon as possible."
+excerpt: "In the SOPlanning Online Planning tool, multiple critical vulnerabilities were found, including an unauthenticated SQL injection. When the non-default public view setting is enabled, it results in several Remote Code Execution (RCE) vulnerabilities. Exploitation of these vulnerabilities could allow an attacker to execute code on the underlying system and access the database."
 researchers:
 - Wietse Boonstra
 - Hidde Smit
-- Victor Pasman
 - Max van der Horst
 cves:
 - CVE-2024-27112
@@ -15,15 +14,15 @@ cves:
 - CVE-2024-27114
 - CVE-2024-27115
 product:
-- SOPlanning Online Planning Tool
+- SO planning
 versions: 
-- version 1.52.01 or earlier
-recommendation: "Update your SOPlanning instance to version 1.52.02 as soon as possible."
-workaround: n/a
-patch_status: Released
+- versions < 1.52.02
+recommendation: "Update to the latest version of SOPlanning Online Planning tool."
+workaround: "None"
+patch_status: None
 status : Closed
-start: 2024-05-27
-end: 2024-10-16
+start: 2024-05-29
+end: 
 timeline:
 - start: 2024-05-27
   end:
@@ -45,24 +44,25 @@ timeline:
   event: "Limited disclosure of the vulnerabilities and publishing of CVEs."
 - start: 2024-10-16
   end:
-  event: "Case closed."
+  event: "Initial casefile created and published."
+ips: 
 
 ---
 
 ## Summary
 
-Various vulnerabilities in the SOPlanning Online Planning Tool have been found by DIVD researchers. The vulnerabilities are present in version 1.52.01. The first vulnerability allows for unauthenticated SQL Injection, which allows an attacker to take control over the underlying database. The second and third vulnerabilities are Remote Code Execution vulnerabilities, which allow attackers to execute code on the underlying system. The fourth and last vulnerability allows attackers to export the database through an Insecure Direct Object Reference vulnerability. 
-
-All vulnerabilites are critical and require immediate patching to prevent compromise. 
+The SOPlanning Online Planning tool up to version 1.52.02 contains several vulnerabilities which can be summarized to:
+- An unauthenticated SQL injection, an attacker can misuse this vulnerability to retrieve information from the database.
+- Two unauthenticated Remote Code Execution (RCE) vulnerabilities, these make it possible for an attacker to upload and execute an executables on the system.
+- Insecure Direct Object Reference, which makes in possible for an attacker to export Database
 
 ## Recommendations
 
-Update your SOPlanning instance to version 1.52.02 at your earliest convenience.
+Update to the latest version of SOPlanning tool. If this is not possible, upgrade to version 1.52.02.
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a version of SOPlanning Online Planning Tool that contains these vulnerabilities and notify these parties. We do this by finding instances that are connected to the Internet and verifying the version installed.
-
+DIVD is currently working to identify parties that are running a version of the SO Planning tool that contain these vulnerabilities and notify these parties. We do this by finding vulnerable SOPlanning Tool systems that are connected to the Internet and verifying the version installed.
 {% include timeline.html %}
 
 ## More information
@@ -71,3 +71,7 @@ DIVD is currently working to identify parties that are running a version of SOPl
 * {% cve CVE-2024-27113 %}
 * {% cve CVE-2024-27114 %}
 * {% cve CVE-2024-27115 %}
+* [National Vulnerability Database for CVE-2024-27112](https://nvd.nist.gov/vuln/detail/CVE-2024-27112)
+* [National Vulnerability Database for CVE-2024-27113](https://nvd.nist.gov/vuln/detail/CVE-2024-27113)
+* [National Vulnerability Database for CVE-2024-27114](https://nvd.nist.gov/vuln/detail/CVE-2024-27114)
+* [National Vulnerability Database for CVE-2024-27115](https://nvd.nist.gov/vuln/detail/CVE-2024-27115)
