--- a/_cases/2024/DIVD-2024-00024.md
+++ b/_cases/2024/DIVD-2024-00024.md
@@ -14,7 +14,7 @@ cves:
 - CVE-2024-27114
 - CVE-2024-27115
 product:
-- SO planning
+- SOPlanning Online Planning Tool
 versions: 
 - versions < 1.52.02
 recommendation: "Update to the latest version of SOPlanning Online Planning tool."
@@ -22,7 +22,7 @@ workaround: "None"
 patch_status: None
 status : Closed
 start: 2024-05-29
-end: 
+end: 2024-10-16
 timeline:
 - start: 2024-05-27
   end:
@@ -46,7 +46,6 @@ timeline:
   end:
   event: "Initial casefile created and published."
 ips:0
-
 ---
 
 ## Summary
