attempt 50 to fix casefile

--- a/_cases/2024/DIVD-2024-00024.md
+++ b/_cases/2024/DIVD-2024-00024.md
@@ -55,6 +55,8 @@ The SOPlanning Online Planning tool up to version 1.52.02 contains several vulne
 - Two unauthenticated Remote Code Execution (RCE) vulnerabilities, these make it possible for an attacker to upload and execute an executables on the system.
 - Insecure Direct Object Reference, which makes in possible for an attacker to export Database
 
+All of these vulnerabilities would allow an attacker to take control of the underlying system.
+
 ## Recommendations
 
 Update to the latest version of SOPlanning tool. If this is not possible, upgrade to version 1.52.02.
