--- a/_cases/2024/DIVD-2024-00028.md
+++ b/_cases/2024/DIVD-2024-00028.md
@@ -39,7 +39,16 @@ timeline:
 - start: 2024-07-12
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
-# ips: 0
+- start: 2024-10-17
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-10-17
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-10-17
+  end:
+  event: "Case closed"
+ips: 1200
 
 ---
 
