forgot some values

--- a/_cases/2024/DIVD-2024-00028.md
+++ b/_cases/2024/DIVD-2024-00028.md
@@ -17,9 +17,9 @@ versions:
 recommendation: "Install the provided hotfix 2 as soon as possible to patch the vulnerability."
 workaround: "None"
 patch_status: Available
-status : Open
+status : Closed
 start: 2024-06-21
-end:
+end: 2024-10-17
 timeline:
 - start: 2024-06-21
   end:
